css/styles.css
/* ... */
/* #endregion Common style CONTAINER ============  */

/* #region ================  HEADER ================== */

.page-header {
  border-bottom: 1px solid #e7e9fc;
  box-shadow:
    0px 2px 1px rgba(46, 47, 66, 0.08),
    0px 1px 1px rgba(46, 47, 66, 0.16),
    0px 1px 6px rgba(46, 47, 66, 0.08);
}

.header-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.nav-list,
.contacts {
  display: none;
}

.logo {
  display: inline-block;
  font-family: "Raleway", sans-serif;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.17;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  color: #4d5ae5;
}

.header-logo {
  padding: 16px 0;
}

.logo-part {
  color: #2e2f42;
}

.burger-btn {
  padding: 0;
  border: none;
  background-color: transparent;
  line-height: 0;
}

.burger-icon {
  display: block;
  fill: #2e2f42;
}

/*  =========== TABLET  =================*/

@media screen and (min-width: 768px) {
  .burger-btn {
    display: none;
  }
  .header-nav {
    display: flex;
    align-items: center;
  }

  .container {
    max-width: 768px;
  }

  .nav-list {
    display: flex;
    align-items: center;
    gap: 40px;
  }

  .header-logo {
    padding: 24px 0;
    margin-right: 120px;
  }

  .nav-link {
    position: relative;
    display: block;
    padding: 24px 0;
    font-weight: 500;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: #2e2f42;
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
  .nav-link:hover,
  .nav-link:focus,
  .nav-link.current {
    color: #404bbf;
  }

  .nav-link.current::after {
    content: "";
    position: absolute;
    left: 0;
    bottom: -1px;
    display: block;
    width: 100%;
    height: 4px;
    border-radius: 2px;
    background-color: #404bbf;
  }

  .contacts {
    font-style: normal;
    display: block;
    margin-left: auto;
  }

  .contacts-list {
    display: flex;
    flex-direction: column;
    gap: 12px;
  }

  /* ... NAV ... */

  .contacts-link {
    display: block;
    font-size: 12px;
    line-height: 1.17;
    letter-spacing: 0.04em;
    color: #434455;
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
  .contacts-link:hover,
  .contacts-link:focus {
    color: #404bbf;
  }
}

/* ============ END TABLET =============*/

/* ============= Decktop ================ */

@media screen and (min-width: 1158px) {
  .container {
    max-width: 1158px;
    padding: 0 15px;
  }
  .header-logo {
    margin-right: 76px;
  }
  .contacts-list {
    flex-direction: row;
    align-items: center;
    gap: 40px;
  }
  .contacts-link {
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
  }
}
/*  ==========  END Desk ========*/

/* #endregion   ===================  END HEADER ==========*/

/* #region ==============  Hero ============== */

.hero {
  background-color: #2e2f42;
  padding: 72px 0;
  margin: 0 auto;
  max-width: 320px;
  background-image:
    linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
    url("../images/hero/hero-mobile.jpg");
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
}

@media screen and (max-width: 767px) and (min-resolution: 192dpi),
  screen and (max-width: 767px) and (min-resolution: 2dppx) {
  .hero {
    background-image:
      linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
      url("../images/hero/hero-mobile@2x.jpg");
  }
}

.hero-title {
  font-size: 36px;
  line-height: 1.11;
  letter-spacing: 0.02em;
  font-weight: 700;
  text-align: center;
  color: #ffffff;
  max-width: 216px;
  margin: 0 auto 72px;
}

.hero-button {
  background-color: #4d5ae5;
  color: #ffffff;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.04em;
  border: none;
  padding: 16px 32px;
  min-width: 169px;
  display: block;
  margin: 0 auto;
  border-radius: 4px;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.hero-button:hover,
.hero-button:focus {
  background-color: #404bbf;
}

/* ==================   TABLET ======================== */

@media screen and (min-width: 768px) {
  .hero {
    padding: 112px 0;
    max-width: 768px;
    background-image:
      linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
      url("../images/hero/hero-tablet.jpg");
  }

  .hero-title {
    font-size: 56px;
    line-height: 1.07;
    max-width: 496px;
    margin-bottom: 36px;
  }

  @media screen and (min-resolution: 192dpi), (min-resolution: 2dppx) {
    .hero {
      background-image:
        linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
        url("../images/hero/hero-tablet@2x.jpg");
    }
  }
}

/* ==================   DeCKTOP  ======================== */

@media screen and (min-width: 1158px) {
  .hero {
    padding: 188px 0;
    max-width: 1440px; /* Вимога D3: обмеження для десктопа */
    background-image:
      linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
      url("../images/hero/hero-desktop.jpg");
  }

   @media screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
  .hero {
    background-image:
      linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
      url("../images/hero/hero-desktop@2x.jpg");
  }
}
  .hero-title {
    margin: 0 auto 48px;
  } 
}



/* #endregion */

/* #region =================  FEATHURES =================== */

.features-icon-container {
  display: none;
  background-color: #f4f4fd;
  border: 1px solid #8e8f99;
  border-radius: 4px;
}

.feature-list {
  display: flex;
  flex-direction: column;
  gap: 72px;
}
.feature-title {
  font-weight: 700;
  font-size: 36px;
  line-height: 1.11;
  letter-spacing: 0.02em;
  text-align: center;
  color: #2e2f42;
  margin-bottom: 8px;
}
.feature-text {
  font-weight: 500;
}
/* ... */

